# open_duck_mini_description

./: CMakeLists.txt  README.md  package.xml
config/: ps5.config.yaml
launch/: display.launch.py
meshes/: antenna.stl  antenna__2.stl  bodybackcover.stl  bodyestopholder.stl  cameracover.stl  cameragreeble.stl  e_stop_adapter_plate.stl  eye_left.stl  eye_left__3.stl  eye_left_base.stl  eye_right.stl  eye_right__2.stl  eye_right__3.stl  faceplate.stl  fake_antenna.stl  frame.stl  front_greeble.stl  front_panel_v4.stl  head_panels.stl  head_panels__2.stl  head_panels__3.stl  lamp.stl  left_antenna_holder.stl  left_lower_cable_guide.stl  left_upper_cable_guide.stl  leftlegcover.stl  lens_1.stl  lens_1__1.stl  lens_1__2.stl  right_antenna_holder.stl  right_leg_cover.stl  right_lower_cable_guide.stl  right_upper_cable_guide.stl  rpi_and_5v_reg_mount.stl  rpi_zero_bridge_bottom.stl  rpi_zero_bridge_top.stl  smd_body_1.stl  smd_body_1__1.stl  smd_body_1__2.stl  star_base_1.stl  (+5 more)
msg/: FeetState.msg
src/: feet_switch_node.py  mini_bdx_joint_state_publisher.py  walk_policy_inference_node.py
urdf/: mini_bdx.urdf
