<?xml version="1.0"?>
<package format="3">
  <name>mini_bdx_description</name>
  <version>0.1.0</version>
  <description>Robot description for the mini_bdx platform</description>
  <maintainer email="jaime@element.aero">Jaime Machuca</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <!-- <depend>robot_state_publisher</depend> -->
  <depend>rviz2</depend>

  <!-- your Python node’s runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mini_bdx_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
