<?xml version="1.0"?>
<package format="3">
  <name>open_duck_mini_description</name>
  <version>0.1.0</version>
  <description>Robot description for the mini_bdx platform</description>
  <maintainer email="jaime@element.aero">Jaime Machuca</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>

  <!-- your Python node’s runtime deps -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-blinka</depend>
  <depend>mini_bdx_runtime</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python3-onnxruntime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
